OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/Referral_Code__c.object-meta.xml
<CustomObject>
    <label>Referral Code</label>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Referral Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>