OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Banner_Description__c.field-meta.xml
<CustomField>
    <fullName>Banner_Description__c</fullName>
    <description>Description for banners in chuzo. [PER-3701]</description>
    <label>Banner Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>