OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Banner_Logo__c.field-meta.xml
<CustomField>
    <fullName>Banner_Logo__c</fullName>
    <description>Logo for banners in chuzo. [PER-3701]</description>
    <label>Banner Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>