OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Text value for self service body. [PER-2778]</description>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>