OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <description>Phone number used in Self Service - Contact Us popup and Footer. [PER-3701]</description>
    <label>Contact Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>