OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Exclusive_Offer_Banner_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Offer_Banner_Background_Color__c</fullName>
    <label>Exclusive Offer Banner Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>