OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Has_Exclusive_Offer__c.field-meta.xml
<CustomField>
    <fullName>Has_Exclusive_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Exclusive Offer</label>
    <type>Checkbox</type>
</CustomField>