OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Offer_Claim_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Offer_Claim_Button_Label__c</fullName>
    <defaultValue>&quot;Claim Rewards&quot;</defaultValue>
    <label>Offer Claim Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>