OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Offer_Main_Text__c.field-meta.xml
<CustomField>
    <fullName>Offer_Main_Text__c</fullName>
    <label>Offer Main Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>