OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Offer_Title__c.field-meta.xml
<CustomField>
    <fullName>Offer_Title__c</fullName>
    <defaultValue>&quot;Exclusive Offer&quot;</defaultValue>
    <label>Offer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>