OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Primary_Banner_Button__c.field-meta.xml
<CustomField>
    <fullName>Primary_Banner_Button__c</fullName>
    <defaultValue>&apos;Shop Now&apos;</defaultValue>
    <label>Primary Banner Button</label>
    <length>255</length>
    <type>Text</type>
</CustomField>