OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Primary_Banner_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Primary_Banner_Subtitle__c</fullName>
    <label>Primary Banner Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>