OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Primary_Banner_URL__c.field-meta.xml
<CustomField>
    <fullName>Primary_Banner_URL__c</fullName>
    <description>Public URL for the primary banner displayed in Shoplink’s landing page. (PER-5694)</description>
    <inlineHelpText>Public URL for the primary banner displayed in Shoplink’s landing page.</inlineHelpText>
    <label>Primary Banner URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>