OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Programs_In_Order__c.field-meta.xml
<CustomField>
    <fullName>Programs_In_Order__c</fullName>
    <description>Contains a sorted, semicolon separated list of the programs that will be shown in the Self Service landing page for this referral code. (PER-5694)</description>
    <inlineHelpText>Contains a sorted, semicolon separated list of the programs that will be shown in the Self Service landing page for this referral code.</inlineHelpText>
    <label>Programs In Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>