OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <description>Code used to track referrals. [PER-2778]</description>
    <label>Referral Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>