OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Secondary_Banner_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Banner_Redirect_URL__c</fullName>
    <description>URL users are redirected to when clicking the secondary banner displayed in Shoplink’s landing page. (PER-5694)</description>
    <inlineHelpText>URL users are redirected to when clicking the secondary banner displayed in Shoplink’s landing page.</inlineHelpText>
    <label>Secondary Banner Redirect URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>