OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Secondary_Banner_Video__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Banner_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Banner Video</label>
    <type>Checkbox</type>
</CustomField>