OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Secondary_Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Brand_Color__c</fullName>
    <description>Hexadecimal value for branding. [PER-2778]</description>
    <label>Secondary Brand Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>