OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>Text value for self service page Subtitle. [PER-2778]</description>
    <label>Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>