OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Terms_of_Use_Link__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Use_Link__c</fullName>
    <description>About us URL used in Self Service Footer (Shoplink URL). [PER-3701]</description>
    <label>Terms of Use Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>