OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Text value for self service page Title. [PER-2778]</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>