OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/validationRules/Referral_Account_Missing_ShopLink_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Account_Missing_ShopLink_Info</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Referral_Account__c)),
  Referral_Account__r.RecordType.DeveloperName = &quot;POE_Dealer&quot;,
  OR(
    ISBLANK(Referral_Account__r.ShopLink_Email__c),
    ISBLANK(Referral_Account__r.ShopLink_Programs__c)
  )
)</errorConditionFormula>
    <errorMessage>Referral Account of type Dealer must have both ShopLink Email and ShopLink Programs filled in.</errorMessage>
</ValidationRule>