OnboardingV2Minimal/force-app/main/default/objects/Referral_Code__c/validationRules/Validate_Referral_Account_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Referral_Account_Record_Type</fullName>
    <active>true</active>
    <description>This validation rule ensures that the &apos;Referral Account&apos; field references an Account with a Record Type of either &apos;Referral&apos; or &apos;Dealer&apos;.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Referral_Account__c)),
    NOT(OR(
        Referral_Account__r.RecordType.DeveloperName = &apos;POE_Dealer&apos;,
        Referral_Account__r.RecordType.DeveloperName = &apos;Referral&apos;
    ))
)</errorConditionFormula>
    <errorMessage>The Referral Account must have a Record Type of either &quot;Referral&quot; or &quot;Dealer&quot;.</errorMessage>
</ValidationRule>